BETA-0.0.1.5 | Captcha Image / JDA Error Fixed