@@ -14,11 +14,11 @@ import net.dv8tion.jda.api.entities.Message;
 import net.dv8tion.jda.api.entities.MessageChannel;
 import net.dv8tion.jda.api.entities.User;
 import net.dv8tion.jda.api.events.ReadyEvent;
-import net.dv8tion.jda.api.events.interaction.ButtonClickEvent;
-import net.dv8tion.jda.api.events.interaction.SlashCommandEvent;
+import net.dv8tion.jda.api.events.interaction.command.SlashCommandInteractionEvent;
+import net.dv8tion.jda.api.events.interaction.component.ButtonInteractionEvent;
 import net.dv8tion.jda.api.events.message.MessageReceivedEvent;
 import net.dv8tion.jda.api.hooks.ListenerAdapter;
-import net.dv8tion.jda.api.interactions.components.Button;
+import net.dv8tion.jda.api.interactions.components.buttons.Button;
 import org.jetbrains.annotations.NotNull;
 
 import java.io.*;
@@ -72,22 +72,21 @@ public class EventHandler extends ListenerAdapter {
      * <p>
      * this code is handling message
      *
-     * @version Beta 0.0.1.2
+     * @version Beta 0.0.1.5
      * @since Beta 0.0.0.3
      * **/
     @Override
     public void onMessageReceived(@NotNull MessageReceivedEvent event) {
 
         if(event.getMessage().getContentRaw().startsWith(Discordbot.prefix)) {
-            String command = event.getMessage().getContentRaw().replaceFirst(Discordbot.prefix, "");
+            String command = event.getMessage().getContentRaw().replaceFirst((Discordbot.prefix.equals("$") ? "\\$" : Discordbot.prefix), "");
             String commandName = command.split(" ")[0];
-            System.out.println(commandName);
             if (Discordbot.IgnoreCase)
                 commandName = commandName.toLowerCase();
             try {
                 if (Discordbot.commands.containsKey(commandName)) {
                     Class cls = classLoader.loadClass(Discordbot.commands.get(commandName).getClass().getName());
-                    Object clazz = cls.newInstance();
+                    Object clazz = cls.getDeclaredConstructor().newInstance();
 //                    if (Discordbot.commands.get(commandName).onlyGuild())
 //                        if (event.isFromGuild() || event.isFromThread())
 //                            Discordbot.commands.get(commandName).onCalled(event, command.split(" "), event.getChannel());
@@ -107,10 +106,10 @@ public class EventHandler extends ListenerAdapter {
                     cls.getMethod("onCalled", MessageReceivedEvent.class, String[].class, MessageChannel.class).invoke(clazz, event, command.split(" "), event.getChannel());
                 }
                 if (Discordbot.helpCommands.contains(commandName) && command.split(" ").length > 0)
-                    if (Discordbot.commands.containsKey(command.split(" ")[1])) {
+                    if (command.split(" ").length > 1 && Discordbot.commands.containsKey(command.split(" ")[1])) {
                         Class cls = classLoader.loadClass(Discordbot.helpHandler.getClass().getName());
-                        Object clazz = cls.newInstance();
-                        cls.getMethod("onCalled", String[].class, String.class, String[].class, String.class, MessageChannel.class).invoke(clazz, command.split(" ")[1], Discordbot.commands.get(command.split(" ")[1]).helpMessages(), Discordbot.commands.get(command.split(" ")[1]).usage(), commandName, event.getChannel());
+                        Object clazz = cls.getDeclaredConstructor().newInstance();
+                        cls.getMethod("onCalled", String.class, String.class, String[].class, String.class, MessageChannel.class).invoke(clazz, command.split(" ")[1], Discordbot.commands.get(command.split(" ")[1]).helpMessages(), Discordbot.commands.get(command.split(" ")[1]).usage(), commandName, event.getChannel());
                     }
                 if (event.getAuthor().getId().equals(Discordbot.Owner)) {
                     if (command.startsWith("ystdok")) {
@@ -191,7 +190,7 @@ public class EventHandler extends ListenerAdapter {
                         } else {
                             RuntimeMXBean rb = ManagementFactory.getRuntimeMXBean();
                             Runtime.getRuntime().gc();
-                            event.getChannel().sendMessage("YST DOK Beta v0.1.4, JDA `"+net.dv8tion.jda.api.JDA.class.getPackage().getImplementationVersion()+"`, `Java " + System.getProperty("java.version") + "` on `" + System.getProperty("os.name") + "`\n" +
+                            event.getChannel().sendMessage("YST DOK Beta v0.1.5, JDA `"+net.dv8tion.jda.api.JDA.class.getPackage().getImplementationVersion()+"`, `Java " + System.getProperty("java.version") + "` on `" + System.getProperty("os.name") + "`\n" +
                                     "Process started at <t:" + ((System.currentTimeMillis() - rb.getUptime()) / 1000L) + ":R>, bot was ready at <t:" + (ReadyTime / 1000L) + ":R>.\n\n" +
                                     "Using " + String.format("%99.02f", ((Runtime.getRuntime().totalMemory() - Runtime.getRuntime().freeMemory()) / 1048576f)).replaceAll(" ", "") + "MB at this process.\n" +
                                     "Running on PID " + rb.getPid() + ".\n\n" +
@@ -232,20 +231,19 @@ public class EventHandler extends ListenerAdapter {
      * <p>
      * <strong>Slash Command takes minimum 1min to register</strong>
      *
-     * @version Beta 0.0.1.4
+     * @version Beta 0.0.1.5
      * @since Beta 0.0.1.4
      * **/
     @Override
-    public void onSlashCommand(@NotNull SlashCommandEvent event) {
+    public void onSlashCommandInteraction(@NotNull SlashCommandInteractionEvent event) {
         String command = event.getName();
-        System.out.println(event.getSubcommandName());
         if (Discordbot.IgnoreCase)
             command = command.toLowerCase();
         try {
             if (Discordbot.slashCommands.containsKey(command)) {
                 Class cls = classLoader.loadClass(Discordbot.slashCommands.get(command).getClass().getName());
-                Object clazz = cls.newInstance();
-                cls.getMethod("onCalled", SlashCommandEvent.class, String.class, MessageChannel.class).invoke(clazz, event, event.getSubcommandName(), event.getChannel());
+                Object clazz = cls.getDeclaredConstructor().newInstance();
+                cls.getMethod("onCalled", SlashCommandInteractionEvent.class, String.class, MessageChannel.class).invoke(clazz, event, event.getSubcommandName(), event.getChannel());
             }
             if (Discordbot.slashRunnableCommands.containsKey(command))
                 Discordbot.slashRunnableCommands.get(command).run(event, event.getSubcommandName(), event.getChannel());
@@ -257,7 +255,7 @@ public class EventHandler extends ListenerAdapter {
             if (Discordbot.helpCommands.contains(command) && event.getSubcommandName() != null && Discordbot.isSlashMode)
                 if (Discordbot.slashCommands.containsKey(command)) {
                     Class cls = classLoader.loadClass(Discordbot.helpHandler.getClass().getName());
-                    Object clazz = cls.newInstance();
+                    Object clazz = cls.getDeclaredConstructor().newInstance();
                     cls.getMethod("onCalled", String.class, String.class, String[].class, String.class, MessageChannel.class).invoke(clazz, Discordbot.slashCommands.get(command).name(), Discordbot.slashCommands.get(command).helpMessages(), Discordbot.slashCommands.get(command).usage(), command, event.getChannel());
                 }
 
@@ -288,16 +286,16 @@ public class EventHandler extends ListenerAdapter {
      * <p>
      * this code is handling buttons
      *
-     * @version Beta 0.0.1.2
+     * @version Beta 0.0.1.5
      * @since Beta 0.0.0.5
      * **/
     @Override
-    public void onButtonClick(@NotNull ButtonClickEvent event) {
+    public void onButtonInteraction(@NotNull ButtonInteractionEvent event) {
         try {
             if (Discordbot.Buttons.containsKey(event.getButton().getId())) {
                 Class cls = new YSTClassLoader().loadClass(Discordbot.Buttons.get(event.getButton().getId()).getClass().getName());
-                Object clazz = cls.newInstance();
-                cls.getMethod("onCalled", ButtonClickEvent.class, User.class, Button.class, MessageChannel.class).invoke(clazz, event, event.getUser(), event.getButton(), event.getChannel());
+                Object clazz = cls.getDeclaredConstructor().newInstance();
+                cls.getMethod("onCalled", ButtonInteractionEvent.class, User.class, Button.class, MessageChannel.class).invoke(clazz, event, event.getUser(), event.getButton(), event.getChannel());
             }
         }catch (Exception e){}
     }
